--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw2",
+  "name": "hw10-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -13,6 +13,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   }
